service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  ports:
  - port: 9999
    protocol: TCP
    targetPort: 9999
    name: http-default
  selector:
    run: test
